--- a/src/less/quadrone/header.less
+++ b/src/less/quadrone/header.less
@@ -204,7 +204,7 @@
       --color-text-selection: var(--t5e-theme-color-foreground);
       --color-text-selection-bg: var(--t5e-theme-color-default);
 
-      .ability.initiative .initiative-score-container {
+      .initiative-score-container {
         background-image: var(--t5e-initiative-image);
 
         .initiative-roll-button {
