--- a/src/less/quadrone/vehicle.less
+++ b/src/less/quadrone/vehicle.less
@@ -9,6 +9,24 @@
     padding-left: 0.5rem;
   }
 
+  &.theme-basic .abilities-container,
+  .abilities-container.abilities-size-small {
+    .initiative-score-container {
+      height: 3.75rem;
+    }
+  }
+  &.theme-basic .abilities-container,
+  .abilities-container.abilities-size-compact {
+    .initiative-score-container {
+      margin-top: 0;
+      padding-top: 0;
+
+      .ability-roll-button {
+        gap: 0.125rem;
+      }
+    }
+  }
+
   .sidebar {
     gap: var(--t5e-size-2x);
 
